--- a/musicplayer.client/src/styles.css
+++ b/musicplayer.client/src/styles.css
@@ -66,7 +66,8 @@ body {
 
 .timeline {
     width: 80%;
-    background-color: #27ae60;
+    background: transparent;
+    background-color: black;
 }
 
 input[type="range"] {
