--- a/musicplayer.client/src/styles.css
+++ b/musicplayer.client/src/styles.css
@@ -71,7 +71,7 @@ body {
     -webkit-appearance: none;
     appearance: none;
     border: none;
-    
+    transition: all 0.1s linear;
 }
 
 .timeline::-webkit-slider-runnable-track {
