--- a/musicplayer.client/src/styles.css
+++ b/musicplayer.client/src/styles.css
@@ -14,13 +14,13 @@ body {
 
 .component {
     background-color: white;
-    max-width: 600px;
-    margin: 1em auto;
+    max-width: 500px;
+    margin: 15em auto;
     padding-bottom: 2em;
     border: 0.1px solid black;
     border-radius: 10px;
     align-items: center;
-    min-height: 150%;
+    height: 100%;
     width: 100%;
     box-shadow: 10px 5px 5px rgba(10, 10, 100, 0.2);
     text-align: center;
@@ -44,8 +44,14 @@ body {
     max-width: 50%;
 }
 
+.title {
+    font-size: 1.5em;
+    margin-top: 0.5em;
+    color: #4f4f4f;
+}
+
 .subTitle {
-    margin-top: -1em;
+    margin-top: -0.4em;
     color: #4f4f4f;
 }
 
@@ -104,4 +110,18 @@ body {
     .component {
         width: 50%;
     }
+}
+
+.gradient-background {
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(
+        to bottom,
+        var(--gradient-color-start, #ffffff))
+        var(--gradient-color-end, #eeeeee)
+    );
+    transition: background 0.5s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
