Added animated gradient

--- a/musicplayer.client/src/App.css
+++ b/musicplayer.client/src/App.css
@@ -7,10 +7,12 @@
     */
 
 #root {
-    position: absolute;
+    position: relative;
     left:0px;
     right: 0px;
     top: 0px;
+    width: 100%;
+    min-height: 100vh;
 }
 
 th, td {
