--- a/musicplayer.client/src/styles.css
+++ b/musicplayer.client/src/styles.css
@@ -6,16 +6,17 @@ body {
     font-family: sans-serif;
     text-align: center;
     width: 100%;
-    height: auto;
+    height: 100%;
     border: none;
     position: relative;
     box-sizing: border-box;
+    min-height: 90vh;
 }
 
 .component {
     background-color: white;
     max-width: 500px;
-    margin: 15em auto;
+    margin: 17em auto;
     padding-bottom: 2em;
     border: 0.1px solid black;
     border-radius: 10px;
@@ -33,6 +34,7 @@ body {
     object-fit: cover;
     border-radius: 10%;
     margin: auto;
+    margin-top: 70px;
     
 }
 
@@ -113,15 +115,50 @@ body {
 }
 
 .gradient-background {
+    position: fixed;
     width: 100%;
-    min-height: 100vh;
+    min-height: 96vh;
     background: linear-gradient(
-        to bottom,
-        var(--gradient-color-start, #ffffff))
+        to bottom left,
+        var(--gradient-color-start, #ffffff),
         var(--gradient-color-end, #eeeeee)
+    ), 
+        linear-gradient(to right ,
+            var(--gradient-color-end, #ffffff),
+            var(--gradient-color-start, #eeeeee)
     );
-    transition: background 0.5s ease-in-out;
-    display: flex;
+    transition: background 1s ease-in-out;
+
     justify-content: center;
     align-items: center;
+    top: 57px;
+    left: 0;
+    background-size: 600% 600%;
+    animation: gradientShift 30s ease infinite, oppositeGradientShift 40s linear infinite;
+}
+
+@keyframes gradientShift {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes oppositeGradientShift {
+    0% {
+        background-position: 50% 0%;
+    }
+    50% {
+        background-position: 50% 100%;
+    }
+    100% {
+        background-position: 50% 0%;
+    }
 }
