--- a/musicplayer.client/src/component/SongView.css
+++ b/musicplayer.client/src/component/SongView.css
@@ -1,4 +1,54 @@
 .tableContainer {
     display: flex;
-    justify-content: space-evenly;
+    width: 100vw;
+    max-width: 1300px;
+    margin: 2rem auto;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    border: solid 1px #ccc;
+    margin-top: 80px;
 }
+
+.song-table {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: 'Montserrat';
+}
+
+.song-table thead {
+    background-color: #5D3FD3;
+    color: white;
+}
+
+.song-table th,
+.song-table td {
+    text-align: left;
+    padding: 1em;
+    font-size: 0.95rem;
+    border-bottom: 1px solid #ccc;
+}
+/* make every second row be off-white for better UI*/
+.song-table tbody tr:nth-child(even) {
+    background-color: #f5f5f5;
+}
+
+.song-table tbody tr:nth-child(odd) {
+    background-color: #ffffff;
+}
+
+.song-table tbody tr:hover {
+    background-color: lightgrey;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.song-table th {
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+
+.song-table td {
+    color: #333;
+}
+
